# agent-verse

./: .railwayrc.json  RAILWAY_DEPLOYMENT.md  README.md
backend/: .env.example  AGENTS.md  main.py  pyproject.toml  railpack.json  railway.json  requirements.txt  scraper.py
backend/db/: db.py  db_actions.py  init_db.py  models.py
backend/s3/: s3_client.py
backend/utils/: get_room.py  get_timetable.py
frontend/: Procfile  package.json  pnpm-lock.yaml  railway.json  to-do.txt
frontend/src/: hooks.server.ts
frontend/src/lib/ai/: agents.ts
frontend/src/lib/components/: app-sidebar.svelte  chat-header.svelte  sidebar-user-nav.svelte  suggested-actions.svelte
frontend/src/lib/components/icons/: vercel.svelte
frontend/src/lib/components/messages/: overview.svelte
frontend/src/lib/components/sidebar-history/: history.svelte
frontend/src/lib/server/: flask_handler.ts
frontend/src/lib/server/auth/: handle.ts
frontend/src/lib/server/db/: queries.ts  schema.ts  seed.ts
frontend/src/lib/server/db/migrations/: 0000_heavy_elektra.sql  0001_worried_the_stranger.sql
frontend/src/lib/server/db/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
frontend/src/routes/(chat)/: +layout.server.ts  +layout.svelte
frontend/src/routes/(chat)/api/sync-moodle/: +server.ts
