[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "playwright>=1.55.0",
    "pydantic>=2.12.3",
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.3",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.9",
    "cryptography>=46.0.3",
    "boto3>=1.28.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.2.1",
]
